typescript/checker/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression5.ts.stderr
error: Cannot assign to this
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression5.ts:1:4
  |
1 | ++ delete foo.bar
  |    ^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            10,
        ),
        hi: BytePos(
            13,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression5.ts:1:11
  |
1 | ++ delete foo.bar
  |           ^^^

